<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyDiaryContacts</string>
    <string name="action_settings">Settings</string>
    <string name="message_splash">Loading system ...</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="speack">Click here to talk</string>
    <string name="msg_fail_login">Fail in login</string>
    <string name="msg_confirm_exit">You want to leave ?</string>
    <string name="msg_question">Question</string>
    <string name="title_activity_lista_contato">List of Contacts</string>
    <string name="msg_wellcome">Wellcome user %1$s</string>
    
    <string name="mnNewContact">New contact</string>
    <string name="mnExit">Exit</string>
    <string name="mnAbout">About</string>
      <string name="mnRemover">Delete</string>
    <string name="mnSMS">SMS</string>
    <string name="mnLigar">Call</string>
    <string name="title_activity_contato">Contato</string>
    <string name="txtNome">Name:</string>
    <string name="txtTelefone">Phone number:</string>
    <string name="txtLatitude">Latitude:</string>
    <string name="txtLongitude">Longitude:</string>
    <string name="btnMapa">Map</string>
    <string name="btnSalvar">Save</string>
    <string name="btnVoltar">Back</string>
    
    
    <string name="create_sql">
        
        create table usuario (
			codusu integer primary key autoincrement,
			logusu varchar(15) not null,
			pwdusu varchar(15) not null
		);
		
		create table contato (
			codcon integer primary key autoincrement,
			nomcon varchar(40) not null,
			telcon varchar(20) not null,
			lat real,
			lng real,
			foto varchar(255)
		);
		        
	</string>
    
    
    
    
    
</resources>
